# AMBIENT

./: BOM_MASTER.md  CLAUDE.md  CONTRIBUTING.md  COST_ESTIMATE.md  PROJECT_MAP.md  PROJECT_STATUS.md  README.md  REPO_STRUCTURE.md
OpenAI Snyth Models/: .gitignore  ASSET_MANIFEST.sha256  CMakeLists.txt  Makefile  README.md  SOURCE_MANIFEST.sha256  requirements-preview.txt
OpenAI Snyth Models/docs/: BUILD_TOOL_LICENSES.md  COLOR_PREVIEW_CATALOG.md  DECISION_LOG.md  HIGH_QUALITY_VISUALS.md  INTEGRATION.md  MOTION_STUDY_CATALOG.md  ORIGINALITY_AND_IP.md  PREVIEW_SIGNAL_REPORT.md  REFERENCE_MOTION_ANALYSIS.md  RESOURCE_AND_QUALITY_REVIEW.md  SOUND_DESIGN.md  UI_MODELS.md  VERIFICATION_LOG.md
OpenAI Snyth Models/firmware/include/: ambient_models.h  ambient_palettes.h  ambient_visuals.h
OpenAI Snyth Models/firmware/src/: ambient_models.c  ambient_palettes.c  ambient_visuals.c
OpenAI Snyth Models/tests/: benchmark.c  verify.c  visual_benchmark.c
OpenAI Snyth Models/tools/: analyze_previews.py  analyze_reference_motion.py  audit_clean_ip.sh  encode_color_gif.py  generate_audio_previews.sh  generate_color_ui_previews.sh  generate_motion_studies.sh  generate_ui_previews.sh  make_color_contact_sheet.py  make_motion_contact_sheets.py  render_audio.c  render_high_quality_visuals.py  render_ui.c  update_manifest.sh  verify_artifacts.sh  verify_color_previews.py  verify_high_quality_visuals.py  verify_motion_studies.py
field-ambience-current/effects-engine/: CMakeLists.txt  INTEGRATION_REPORT.md  INTEGRATION_TASK.md  LICENSE-PROPRIETARY.md  Makefile  README.md
field-ambience-current/effects-engine/docs/: EFFECTS_ENGINE.md  REFERENCE_INTEGRATION.md  RESOURCE_AND_QUALITY_REVIEW.md  VERIFICATION_LOG.md
field-ambience-current/effects-engine/tests/: effects_benchmark.c  effects_verify.c
field-ambience-current/effects-engine/tools/: render_effects.c
field-ambience-current/firmware-c/: .gitignore  CMakeLists.txt  HOERTEST.html  HOERTEST.md  README.md
field-ambience-current/firmware-c-next/: .gitignore  CMakeLists.txt  README.md  pico_sdk_import.cmake
field-ambience-current/firmware-c-next/cmake/: arm-none-eabi-m7.cmake
field-ambience-current/firmware-c-next/include/: ambience.h  ambient_effects.h  audio.h  audio_profiler.h  baked_font.h  bass.h  battery.h  bloom.h  blur.h  body.h  bowed.h  brain.h  cells.h  composer.h  controls.h  diag.h  drone.h  dsp.h  dsp_ladder.h  echo.h  ember.h  encoders.h  engine.h  fx_master.h  generative.h  gesture.h  glass.h  harmonic_bass.h  harmony.h  horn.h  knobs.h  landscape.h  leds.h  mcp23017.h  menu.h  midi.h  oled.h  oled_color.h  overlay.h  pad.h  (+17 more)
field-ambience-current/firmware-c-next/include/v2/: arp.h  beat.h  beauty_guard.h  diffuser.h  engine_v2.h  field_voice.h  harmony_field.h  material_texture.h  mod_delay.h  motion.h  synth_engine.h  synth_host.h  worlds.h
field-ambience-current/firmware-c-next/src/: ambience.c  ambient_effects.c  audio_i2s.pio  audio_profiler.c  baked_font.c  baked_font_data.c  bass.c  battery.c  bloom.c  blur.c  body.c  bowed.c  brain.c  cells.c  composer.c  controls.c  drone.c  dsp.c  dsp_ladder.c  echo.c  ember.c  encoders.c  engine.c  font_8x8.c  fx_master.c  generative.c  gesture.c  glass.c  harmonic_bass.c  harmony.c  horn.c  knobs.c  landscape.c  lcd_st7789.c  leds.c  main.c  menu.c  midi.c  oled.c  oled_color.c  (+19 more)
field-ambience-current/firmware-c-next/src/hal_h743/: adc_h743.c  audio_h743.c  diag_h743.c  encoders_h743.c  h743_hal.h  lcd_st7789_h743.c  main_h743.c  mcp23017_h743.c  midi_uart_h743.c  qspi_psram_h743.c  scenes_flash_h743.c  stm32h743_flash.ld  stm32h7xx_hal_conf.h  stm32h7xx_it.c  system_clock_h743.c
field-ambience-current/firmware-c-next/src/hal_pico/: audio_pico.c  lcd_st7789_pico.c  main_pico.c  mcp23017_pico.c  midi_pio.c  midi_tx.pio
field-ambience-current/firmware-c-next/src/v2/: arp.c  beat.c  beauty_guard.c  diffuser.c  engine_v2.c  field_voice.c  harmony_field.c  material_texture.c  mod_delay.c  motion.c  synth_host.c  worlds.c
field-ambience-current/firmware-c-next/src/v2/engines/: engine_acid.c  (+5 more)
field-ambience-current/firmware-c-next/test/: lint_hotpath.sh  run_tests.sh  test_ambience.c  test_audio_profiler.c  test_bass.c  test_blocksize_sweep.c  test_bloom.c  test_blur.c  test_brain.c  test_brain_cells.c  test_cells.c  test_controls.c  test_display_bench.c  test_drone.c  test_echo.c  test_ember.c  test_generative.c  test_generative_interactive.c  test_generative_tick.c  test_gesture.c  test_harmonic_bass.c  test_harmony.c  test_knobs.c  test_landscape.c  test_leds.c  test_menu_battery.c  test_midi.c  test_oled_color.c  test_oled_convert.c  test_pad.c  test_params.c  test_reverb_engine.c  test_reverb_presets.c  test_rolepatch.c  test_scenes.c  test_sound_upgrades.c  test_synth_device.c  test_synth_host.c  test_tape.c  test_tuning.c  (+4 more)
field-ambience-current/firmware-c-next/tools/: display_hw_test.c  display_sim.html  generate_fonts.py  render_acid_dry.c  render_autoplay.c  render_bowed.c  render_bowed.sh  render_catalog.c  render_catalog.sh  render_cells_ab.c  render_cells_granular.c  render_cells_perform.c  render_dreamy_warm.c  render_drone_drift_ab.c  render_engine_dry.c  render_fm_glass_dry.c  render_harmonic_bass.c  render_horn.c  render_horn.sh  render_landscape.c  render_landscape.sh  render_oled.c  render_pad_profiles.c  render_performance.c  render_playsession5.c  render_playsession5.sh  render_ps2_world.c  render_reverb_ab.c  render_samples.c  render_samples.sh  render_session.c  render_sh2_sketches.c  render_synth.c  render_synth_samples.c  render_synth_samples.sh  render_v2_wav.c  render_wav.c  render_wav.sh  render_worlds.c  render_worlds5.c  (+1 more)
field-ambience-current/firmware-c/hoertest/: HOERTEST.html
field-ambience-current/firmware-c/include/: audio.h  brain.h  dsp.h  engine.h  mcp23017.h  pad.h  version.h  voices.h
field-ambience-current/firmware-c/src/: audio.c  bass.c  dsp.c  encoders.c  engine.c  font_8x8.c  main.c  oled.c  pad.c  texture.c
field-ambience-current/firmware-c/test/: run_tests.sh  test_brain.c  test_dsp_voices.c  test_pad.c  test_texture.c
(+148 files in other folders)
